mythtv (2:0.26.0~master.20120410.1f5962a-0ubuntu1) UNRELEASED; urgency=low

  * Switch to 0.26 branch for master builds.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 10 Apr 2012 02:52:25 -0500

mythtv (2:0.25.0+fixes.20120410.1f5962a-0ubuntu2) UNRELEASED; urgency=low

  * fix get-orig-source rule's broken tarball fetch from archive.
  * Enable libcec support (LP: #982272)
  * Add missingok to additional mythtv-backend logs. (LP: #982162)
  * Pull an updated snapshot of Mythbuntu theme, to avoid theme
    downloader telling the user there is an updated theme on first
    boot.
  * Test for an empty key on public mysql. (LP: #989371)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 10 Apr 2012 14:20:32 -0500

mythtv (2:0.25.0+fixes.20120410.1f5962a-0ubuntu1) precise; urgency=low

  * Add a fallback to master for non-existant fixes branches.
  * Update to 0.25 gold release.
  * New upstream checkout (1f5962a)
  * >>Upstream changes since last upload (041ecad):
  * [1f5962a] RingBuffer: Make a few more attempts to read when
    oldfile=true.
  * [cffed2b] Merge branch 'master' of github.com:MythTV/mythtv
  * [4f16846] Update the Danish translation of mythfrontend and all
    plugins.
  * [31fa9dd] Revert "Fix popup windows from disappearing in MythCenter-
    wide when using the"
  * [d824ea2] Fix issues with 805453a6 and df8548e7.
  * [4b28a57] Remove the MythArchive date/time formats from the Hong
    Kong Chinese locale file.
  * [df8548e] Add a null pointer check on 'screen'
  * [805453a] Don't trigger hide/show animations if the screens should
    still be visible because the foreground screen isn't fullscreen.
  * [d1b081e] Updated Czech MythFrontend translation
  * [e6c4aa0] Updated Polish MythFrontend and alll plugins translation
    from Warpme
  * [39695b2] Revert "Fixes #10490. Don't return from safe_read() early
    on stopreads if we haven't read any bytes, this looks like an eof to
    higher levels of code."