@@ -92,7 +92,7 @@ Package: mythtv
 Architecture: all
 Depends: mysql-server, mythtv-database, mythtv-frontend, mythtv-backend, ntp | time-daemon | ntp-simple, ${misc:Depends}
 Suggests: mythtv-doc
-Description: A personal video recorder application (client and server)
+Description: Personal video recorder application (client and server)
  MythTV implements the following PVR features, and more, with a
  unified graphical interface:
  .
@@ -157,7 +157,7 @@ Replaces:  mythtv (<< 0.8-1),
            mythvideo
 Breaks:    mythtv-backend (<< 1:0.24.0+fixes27252), 
            mythvideo
-Description: A personal video recorder application (common data)
+Description: Personal video recorder application (common data)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
  .
@@ -170,7 +170,7 @@ Conflicts: mythtv (<< 0.8-1)
 Section: doc
 Replaces: mythtv (<< 0.8-1)
 Depends: ${misc:Depends}
-Description: A personal video recorder application (documentation)
+Description: Personal video recorder application (documentation)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
  .
@@ -182,7 +182,7 @@ Depends: mythtv-common, libdbd-mysql-perl, mysql-client, cron, ${misc:Depends}
 Recommends: update-notifier | update-notifier-kde | adept-notifier
 Conflicts: mythtv (<< 0.8-1), mythtv-common (<< 0.8-2)
 Replaces: mythtv (<< 0.8-1), mythtv-common (<< 0.8-2)
-Description: A personal video recorder application (database)
+Description: Personal video recorder application (database)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
  .
@@ -196,7 +196,7 @@ Conflicts: mythtv (<< 0.8-1)
 Replaces: mythtv (<< 0.8-1), mythtv-frontend (<= 0.20-0.4)
 Recommends: ntp | time-daemon | ntp-simple, logrotate, libmyth-python, libmythtv-perl
 Suggests: mythtv-frontend, mythweb, mythtv-database, xmltv-util
-Description: A personal video recorder application (server)
+Description: Personal video recorder application (server)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
  .
@@ -243,7 +243,7 @@ Suggests: mythtv-backend, mythmusic, mythweather, mythgallery, mythgame, ntp | t
 Conflicts: mythtv (<< 0.8-1), mythappearance (<< 0.21.0), mythstream (<< 0.21.0), mythflix (<< 0.23.0)
 Replaces: mythtv (<< 0.8-1),  mythappearance (<< 0.21.0), mythvideo
 Breaks: mythvideo
-Description: A personal video recorder application (client)
+Description: Personal video recorder application (client)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
  .
